--- a/html/index.html
+++ b/html/index.html
@@ -24,14 +24,14 @@
 
         <nav class="navbar-structure">
             <div class="container-fluid">
-                <a class="navbar-brand" href="C:\Users\pc\Documents\Github Repositories\Testing Site\html\home.html">Big-Ol' Testing Site</a>
+                <a class="navbar-brand" href="C:\Users\pc\Documents\Github Repositories\Testing Site\html\index.html">Big-Ol' Testing Site</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="C:\Users\pc\Documents\Github Repositories\Testing Site\html\home.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="C:\Users\pc\Documents\Github Repositories\Testing Site\html\index.html">Home</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="C:\Users\pc\Documents\Github Repositories\Testing Site\html\price_puller.html">Price Puller</a>
