--- a/price_puller.html
+++ b/price_puller.html
@@ -4,16 +4,14 @@
 <head>
 
     <meta charset="utf-8" />
-    <title>Home-Page</title>
+    <title>EVE Price Puller</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="C:\Users\pc\Documents\Github Repositories\Testing Site\js\price_pull_calc.js"></script>
     <script src="C:\Users\pc\Documents\Github Repositories\Testing Site\js\sidebar.js"></script>
     <link href="C:\Users\pc\Documents\Github Repositories\Testing Site\css\master.css" rel="stylesheet">
     <link href="C:\Users\pc\Documents\Github Repositories\Testing Site\css\app.css" rel="stylesheet">
-
-
-
 
 </head>
 <body>
@@ -24,24 +22,22 @@
 
         <nav class="navbar-structure">
             <div class="container-fluid">
-                <a class="navbar-brand" href="C:\Users\pc\Documents\Github Repositories\Testing Site\index.html">Big-Ol' Testing Site</a>
+                <a class="navbar-brand" href="C:\Users\pc\Documents\Github Repositories\Testing Site\html\index.html">Big-Ol' Testing Site</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="C:\Users\pc\Documents\Github Repositories\Testing Site\index.html">Home</a>
+                            <a class="nav-link" href="C:\Users\pc\Documents\Github Repositories\Testing Site\html\index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="C:\Users\pc\Documents\Github Repositories\Testing Site\price_puller.html">Price Puller</a>
+                            <a class="nav-link active" aria-current="page" href="C:\Users\pc\Documents\Github Repositories\Testing Site\html\price_puller.html">Price Puller</a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
-
-
 
         <div class="row justify-content-start">
 
@@ -50,12 +46,14 @@
             <div class="col-3">
                 <div class="body-component-structure">
                     <div class="content-container-structure">
+
                         <div class="sidebar-header-structure">
                             <h4>SIDE BAR MODE</h4>
                         </div>
                         <div class="content-structure">
                             <p id="sidebar-dynamic-content"></p>
                         </div>
+
                     </div>
                 </div>
             </div>
@@ -65,31 +63,57 @@
             <div class="col-9">
                 <div class="body-component-structure">
                     <div class="content-container-structure">
+
                         <div class="content-header-structure">
-                            <h1>Welcome to my Big-Ol' testing site!</h1>
+                            <h1>Eve Online Item Price Puller</h1>
                         </div>
                         <div class="content-structure">
                             <p>
-                                This is a short site at the moment as I'm still learning the basics of web developement. You can see the different applications available
-                                to use by navigating the top navbar. So far the applications I have are:
-                                <br />
-                                <ul>
-                                    <li>
-                                        <a href="C:\Users\pc\Documents\Github Repositories\Testing Site\price_puller.html">Eve Online Price Puller</a>
-                                    </li>
-                                </ul>
-                                There will be plenty more applications coming. Eventually this site will be converted into an actual website to host useful applications
-                                to EVE players. At the same time I plan to learn and improve my skills along the way! Sounds like a win-win scenario!
-                                <br />
-                                Yes, there is a lot of unnecessary text throughout the homepage. The intent is to create enough information to fill the containers
-                                and make this look like a legit front-page :) After some time there will be more useful information here, but until then, enjoy the view!
+                                Fill in the information below to pull market information per item ID.
                             </p>
                         </div>
+                        <div class="content-structure">
+                            <form name="form_collect_ids" action="/" method="post">
+                                <label for="type_id_list" class="form-label">Item ID List</label>
+                                <textarea class="form-control" id="type_id_list" name="type_id_list" rows="10" placeholder="35"></textarea>
+                            </form>
+                        </div>
+                        <div class="content-structure">
+                            <button type="submit" class="btn btn-primary mb-3" onclick="jitaSell()">Submit</button>
+                        </div>
+
                     </div>
                 </div>
             </div>
 
         </div>
+
+        <div class="row justify-content-start" style="display: none" id="result_container">
+
+            <!--Results-->
+
+            <div class="col-12">
+                <div class="body-component-structure">
+                    <div class="content-container-structure">
+
+                        <div class="content-structure">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Jita Sell Price</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="results">
+                                </tbody>
+                            </table>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
     </div>
 </body>
 </html>
