--- a/html/index.html
+++ b/html/index.html
@@ -8,9 +8,9 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="C:\Users\pc\Documents\Github Repositories\Testing Site\js\sidebar.js"></script>
-    <link href="C:\Users\pc\Documents\Github Repositories\Testing Site\css\master.css" rel="stylesheet">
-    <link href="C:\Users\pc\Documents\Github Repositories\Testing Site\css\app.css" rel="stylesheet">
+    <script src="js\sidebar.js"></script>
+    <link href="css\master.css" rel="stylesheet">
+    <link href="css\app.css" rel="stylesheet">
 
 
 
@@ -24,17 +24,17 @@
 
         <nav class="navbar-structure">
             <div class="container-fluid">
-                <a class="navbar-brand" href="C:\Users\pc\Documents\Github Repositories\Testing Site\index.html">Big-Ol' Testing Site</a>
+                <a class="navbar-brand" href="index.html">Big-Ol' Testing Site</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="C:\Users\pc\Documents\Github Repositories\Testing Site\index.html">Home</a>
+                            <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="C:\Users\pc\Documents\Github Repositories\Testing Site\price_puller.html">Price Puller</a>
+                            <a class="nav-link" href="price_puller.html">Price Puller</a>
                         </li>
                     </ul>
                 </div>
@@ -75,7 +75,7 @@
                                 <br />
                                 <ul>
                                     <li>
-                                        <a href="C:\Users\pc\Documents\Github Repositories\Testing Site\price_puller.html">Eve Online Price Puller</a>
+                                        <a href="price_puller.html">Eve Online Price Puller</a>
                                     </li>
                                 </ul>
                                 There will be plenty more applications coming. Eventually this site will be converted into an actual website to host useful applications
