--- a/price_puller.html
+++ b/price_puller.html
@@ -12,9 +12,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="js\price_pull_calc.js"></script>
-    <script src="js\sidebar.js"></script>
-    <script src="js/dev.js"></script>
+    <script src="src/js/price_pull_calc.js"></script>
+    <script src="src/js/sidebar.js"></script>
+    <script src="src/js/dev.js"></script>
     <link href="css\master.css" rel="stylesheet">
     <link href="css\app.css" rel="stylesheet">
 
