--- a/price_puller.html
+++ b/price_puller.html
@@ -14,7 +14,7 @@
         crossorigin="anonymous"></script>
     <script src="src/js/price_pull_calc.js"></script>
     <script src="src/js/sidebar.js"></script>
-    <script src="src/js/dev.js"></script>
+    <script src="src/ts/dev.ts"></script>
     <link href="css\master.css" rel="stylesheet">
     <link href="css\app.css" rel="stylesheet">
 
