--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
-    <script src="bundle.js"></script>
-    <link href="../css/master.css" rel="stylesheet">
-    <link href="../css/app.css" rel="stylesheet">
+    <script src="dist/bundle.js"></script>
+    <link href="./css/master.css" rel="stylesheet">
+    <link href="./css/app.css" rel="stylesheet">
 
 
 
@@ -41,7 +41,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="price_puller.html">Price Puller</a>
+                            <a class="nav-link" href="dist/price_puller.html">Price Puller</a>
                         </li>
                     </ul>
                 </div>
