I'm dumb, and I fixed it.

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                             <a class="nav-link active" aria-current="page" href="index.html">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="dist/price_puller.html">Price Puller</a>
+                            <a class="nav-link" href="./dist/price_puller.html">Price Puller</a>
                         </li>
                     </ul>
                 </div>
@@ -83,7 +83,7 @@
                                 <br />
                             <ul>
                                 <li>
-                                    <a href="price_puller.html">Eve Online Price Puller</a>
+                                    <a href="./dist/price_puller.html">Eve Online Price Puller</a>
                                 </li>
                             </ul>
                             There will be plenty more applications coming. Eventually this site will be converted into
