--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="./dist/price_puller.html">Price Puller</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="./dist/structure_puller.html">Structure Puller</a>
+                        </li>
                     </ul>
                 </div>
             </div>
